--- a/03_template/detail-news.html
+++ b/03_template/detail-news.html
@@ -15,7 +15,7 @@
     <meta name="description" content="" />
     <meta name="author" content="lgsp_Harold-Hua">
 
-    <title>For Investor</title>
+    <title>Focus Universal Engages Hayden IR to Develop Comprehensive Investor Relations Program</title>
 
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/bootstrap.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i" rel="stylesheet">
@@ -126,63 +126,9 @@
             </div>
         </div>
     </section>
-    <section class="section-banner section--gray">
-        <div class="container sqr sqr--banner">
-            <div class="sqr-inner">
-                <div id="TopBanner" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="image-center">
-                                <a href="#"><img src="assets/main/images/banner-for-investor.png" alt="First slide"></a>
-                            </div>
-                        </div>
-
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="section--gray section--big">
-        <div class="container">
-            <h2 class="section-title center">For Investor</h2>
-            <div class="information">
-                <p>Focus Universal Inc., a publicly traded company (OTCQB: FCUV), is a universal smart device developer
-                    and manufacturer, headquartered in Los Angeles, California.
-                </p>
-                <p>The Focus Universal technology features a Universal Smart Instrumentation Platform (USIP), which
-                    provides a unique and universal solution for embedded design, industrial control and monitoring. It
-                    achieves this using a mobile device or computer as a display to communicate with a group of
-                    sensors/probes. These sensor modules can be produced by any manufacturer and integrated seamlessly
-                    with our USIP into our Smart App.
-                </p>
-                <p>This is a simple hero unit, a simple jumbotron-style component for calling extra
-                    attention to featured content or information.
-                </p>
-                <p>Our goal is to reduce the need for expensive, limited technology instruments and replace it with an
-                    inexpensive, singular device that can communicate seamlessly with more advanced monitoring and
-                    control.
-                </p>
-
-            </div>
-        </div>
-    </section>
-
     <section class="section--big section--dark">
         <a name="Marketing"></a>
         <div class="container">
-            <h2 class="section-title right">Marketing</h2>
             <div class="row">
                 <div class="col-md-3">
                     <div class="stock">
@@ -219,7 +165,8 @@
     <section class="section--big">
         <a name="Events"></a>
         <div class="container">
-            <div class="section-title">Envents</div>
+            <h1 class="section-sub-title">Focus Universal Engages Hayden IR to Develop Comprehensive Investor Relations
+                Program</h1>
             <div class="list-links">
                 <ul class="inline">
                     <li><a href="#">Press Releases</a></li>
@@ -228,125 +175,74 @@
                     <li><a href="#">Annual Reports</a></li>
                 </ul>
             </div>
-            <div class="list-infos list-infos--two">
-                <div class="list-info">
-                    <div class="list-info-media">
-                        <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                    </div>
-                    <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
-                                Comprehensive
-                                Investor Relations Program</a></div>
-                        <div class="list-info-summary"><a href="detail-news.html">
-                                Gone are the days of planting your seeds and hoping for the best. Farming has evolved
-                                from
-                                horse and plough, to GMO, and now further on, to smart technologies.
-
-                                The Economist covered the technological future of farming and it’s effective impacts on
-                                yield, and therefore profits.
-                            </a></div>
-                        <div class="list-info-date">20 Sep, 2017</div>
-                        <div class="list-info-auther">By Desheng Wang</div>
-                    </div>
-                </div>
-                <div class="list-info">
-                    <div class="list-info-media">
-                        <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                    </div>
-                    <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
-                                Comprehensive
-                                Investor Relations Program</a></div>
-                        <div class="list-info-summary"><a href="detail-news.html">
-                                Gone are the days of planting your seeds and hoping for the best. Farming has evolved
-                                from
-                                horse and plough, to GMO, and now further on, to smart technologies.
-
-                                The Economist covered the technological future of farming and it’s effective impacts on
-                                yield, and therefore profits.
-                            </a></div>
-                        <div class="list-info-date">20 Sep, 2017</div>
-                        <div class="list-info-auther">By Desheng Wang</div>
-                    </div>
-                </div>
-                <div class="list-info">
-                    <div class="list-info-media">
-                        <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                    </div>
-                    <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
-                                Comprehensive
-                                Investor Relations Program</a></div>
-                        <div class="list-info-summary"><a href="detail-news.html">
-                                Gone are the days of planting your seeds and hoping for the best. Farming has evolved
-                                from
-                                horse and plough, to GMO, and now further on, to smart technologies.
-
-                                The Economist covered the technological future of farming and it’s effective impacts on
-                                yield, and therefore profits.
-                            </a></div>
-                        <div class="list-info-date">20 Sep, 2017</div>
-                        <div class="list-info-auther">By Desheng Wang</div>
-                    </div>
-                </div>
-                <div class="list-info">
-                    <div class="list-info-media">
-                        <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                    </div>
-                    <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
-                                Comprehensive
-                                Investor Relations Program</a></div>
-                        <div class="list-info-summary"><a href="detail-news.html">
-                                Gone are the days of planting your seeds and hoping for the best. Farming has evolved
-                                from
-                                horse and plough, to GMO, and now further on, to smart technologies.
-
-                                The Economist covered the technological future of farming and it’s effective impacts on
-                                yield, and therefore profits.
-                            </a></div>
-                        <div class="list-info-date">20 Sep, 2017</div>
-                        <div class="list-info-auther">By Desheng Wang</div>
-                    </div>
-                </div>
-                <div class="list-info">
-                    <div class="list-info-media">
-                        <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                    </div>
-                    <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
-                                Comprehensive
-                                Investor Relations Program</a></div>
-                        <div class="list-info-summary"><a href="detail-news.html">
-                                Gone are the days of planting your seeds and hoping for the best. Farming has evolved
-                                from
-                                horse and plough, to GMO, and now further on, to smart technologies.
-
-                                The Economist covered the technological future of farming and it’s effective impacts on
-                                yield, and therefore profits.
-                            </a></div>
-                        <div class="list-info-date">20 Sep, 2017</div>
-                        <div class="list-info-auther">By Desheng Wang</div>
-                    </div>
-                </div>
-                <div class="list-info">
-                    <div class="list-info-media">
-                        <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                    </div>
-                    <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
-                                Comprehensive
-                                Investor Relations Program</a></div>
-                        <div class="list-info-summary"><a href="detail-news.html">
-                                Gone are the days of planting your seeds and hoping for the best. Farming has evolved
-                                from
-                                horse and plough, to GMO, and now further on, to smart technologies.
-
-                                The Economist covered the technological future of farming and it’s effective impacts on
-                                yield, and therefore profits.
-                            </a></div>
-                        <div class="list-info-date">20 Sep, 2017</div>
-                        <div class="list-info-auther">By Desheng Wang</div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="list-infos list-infos--breif">
+                        <div class="list-info">
+                            <div class="list-info-media">
+                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
+                            </div>
+                            <div class="list-info-body">
+                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
+                                        IR to Develop
+                                        Comprehensive
+                                        Investor Relations Program</a></div>
+                                <div class="list-info-date">20 Sep, 2017</div>
+                                <div class="list-info-auther">By Desheng Wang</div>
+                            </div>
+                        </div>
+                        <div class="list-info">
+                            <div class="list-info-media">
+                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
+                            </div>
+                            <div class="list-info-body">
+                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
+                                        IR to Develop
+                                        Comprehensive
+                                        Investor Relations Program</a></div>
+                                <div class="list-info-date">20 Sep, 2017</div>
+                                <div class="list-info-auther">By Desheng Wang</div>
+                            </div>
+                        </div>
+                        <div class="list-info">
+                            <div class="list-info-media">
+                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
+                            </div>
+                            <div class="list-info-body">
+                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
+                                        IR to Develop
+                                        Comprehensive
+                                        Investor Relations Program</a></div>
+                                <div class="list-info-date">20 Sep, 2017</div>
+                                <div class="list-info-auther">By Desheng Wang</div>
+                            </div>
+                        </div>
+                        <div class="list-info">
+                            <div class="list-info-media">
+                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
+                            </div>
+                            <div class="list-info-body">
+                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
+                                        IR to Develop
+                                        Comprehensive
+                                        Investor Relations Program</a></div>
+                                <div class="list-info-date">20 Sep, 2017</div>
+                                <div class="list-info-auther">By Desheng Wang</div>
+                            </div>
+                        </div>
+                        <div class="list-info">
+                            <div class="list-info-media">
+                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
+                            </div>
+                            <div class="list-info-body">
+                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
+                                        IR to Develop
+                                        Comprehensive
+                                        Investor Relations Program</a></div>
+                                <div class="list-info-date">20 Sep, 2017</div>
+                                <div class="list-info-auther">By Desheng Wang</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -367,7 +263,8 @@
             <div class="list-infos list-infos--two">
                 <div class="list-info">
                     <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
+                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to
+                                Develop
                                 Comprehensive
                                 Investor Relations Program</a></div>
                         <div class="list-info-summary">
@@ -385,7 +282,8 @@
                 </div>
                 <div class="list-info">
                     <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
+                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to
+                                Develop
                                 Comprehensive
                                 Investor Relations Program</a></div>
                         <div class="list-info-summary">
@@ -403,7 +301,8 @@
                 </div>
                 <div class="list-info">
                     <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
+                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to
+                                Develop
                                 Comprehensive
                                 Investor Relations Program</a></div>
                         <div class="list-info-summary">
@@ -421,7 +320,8 @@
                 </div>
                 <div class="list-info">
                     <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
+                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to
+                                Develop
                                 Comprehensive
                                 Investor Relations Program</a></div>
                         <div class="list-info-summary">
@@ -439,7 +339,8 @@
                 </div>
                 <div class="list-info">
                     <div class="list-info-body">
-                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to Develop
+                        <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to
+                                Develop
                                 Comprehensive
                                 Investor Relations Program</a></div>
                         <div class="list-info-summary">
