--- a/03_template/detail-news.html
+++ b/03_template/detail-news.html
@@ -126,12 +126,11 @@
             </div>
         </div>
     </section>
-    <section class="section--big section--dark">
-        <a name="Marketing"></a>
+    <section class="section--dark">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="stock">
+                    <div class="stock stock--small">
                         <div class="stock-code">OOTC : FCUV</div>
                         <div class="stock-price">$ 7.50</div>
                         <div class="stock-trend">⇑0.25 (3.45%)</div>
@@ -143,30 +142,21 @@
                         <p>
                             Focus Universal Inc., a publicly traded company (OTCQB: FCUV), is a universal smart device
                             developer and manufacturer headquartered in Los Angeles, CA</p>
-                        <p>Focus Universal features a Universal Smart Instrumentation Platform (USIP), which provides a
-                            unique
-                            and universal solution for embedded design, industrial control and monitoring. It achieves
-                            this
-                            using a mobile device or computer as a display to communicate with a group of
-                            sensors/probes. These
-                            sensor modules can be produced by any manufacturer and integrated seamlessly with our USIP
-                            into our
-                            Smart App. This patented technology replaces expensive, limited technology instruments with
-                            an
-                            inexpensive, singular device that can communicate seamlessly while providing advanced
-                            monitoring
-                            and control.</p>
-
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section--big">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">For Investor</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Events</li>
+        </ol>
+    </nav>
+    <section>
         <a name="Events"></a>
         <div class="container">
-            <h1 class="section-sub-title">Focus Universal Engages Hayden IR to Develop Comprehensive Investor Relations
-                Program</h1>
             <div class="list-links">
                 <ul class="inline">
                     <li><a href="#">Press Releases</a></li>
@@ -175,92 +165,55 @@
                     <li><a href="#">Annual Reports</a></li>
                 </ul>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="list-infos list-infos--breif">
-                        <div class="list-info">
-                            <div class="list-info-media">
-                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                            </div>
-                            <div class="list-info-body">
-                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
-                                        IR to Develop
-                                        Comprehensive
-                                        Investor Relations Program</a></div>
-                                <div class="list-info-date">20 Sep, 2017</div>
-                                <div class="list-info-auther">By Desheng Wang</div>
-                            </div>
+            <div class="block">
+                <div class="block-side">
+                    <ul class="list-group">
+                        <li class="list-group-item list-group-item--title">Hot Categories</li>
+                        <li class="list-group-item"><a href="#">How News</a></li>
+                        <li class="list-group-item"><a href="#">How Events</a></li>
+                        <li class="list-group-item"><a href="#">Stock Trend</a></li>
+                        <li class="list-group-item"><a href="#">New Products</a></li>
+                    </ul>
+                    <ul class="list-group">
+                        <li class="list-group-item list-group-item--title">Hot Categories</li>
+                        <li class="list-group-item"><a href="#">How News</a></li>
+                        <li class="list-group-item"><a href="#">How Events</a></li>
+                        <li class="list-group-item"><a href="#">Stock Trend</a></li>
+                        <li class="list-group-item"><a href="#">New Products</a></li>
+                    </ul>
+                </div>
+                <div class="block-body">
+                    <div class="article">
+                        <h1 class="article-title">Focus Universal Engages Hayden IR to Develop Comprehensive Investor
+                            Relations
+                            Program</h1>
+                        <div class="article-info inline">
+                            <div class="article-info-cell">posted on Aug 30, 2018 04:01PM</div>
+                            <div class="article-info-cell">Edited By Desheng Wang</div>
                         </div>
-                        <div class="list-info">
-                            <div class="list-info-media">
-                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                            </div>
-                            <div class="list-info-body">
-                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
-                                        IR to Develop
-                                        Comprehensive
-                                        Investor Relations Program</a></div>
-                                <div class="list-info-date">20 Sep, 2017</div>
-                                <div class="list-info-auther">By Desheng Wang</div>
-                            </div>
-                        </div>
-                        <div class="list-info">
-                            <div class="list-info-media">
-                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                            </div>
-                            <div class="list-info-body">
-                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
-                                        IR to Develop
-                                        Comprehensive
-                                        Investor Relations Program</a></div>
-                                <div class="list-info-date">20 Sep, 2017</div>
-                                <div class="list-info-auther">By Desheng Wang</div>
-                            </div>
-                        </div>
-                        <div class="list-info">
-                            <div class="list-info-media">
-                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                            </div>
-                            <div class="list-info-body">
-                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
-                                        IR to Develop
-                                        Comprehensive
-                                        Investor Relations Program</a></div>
-                                <div class="list-info-date">20 Sep, 2017</div>
-                                <div class="list-info-auther">By Desheng Wang</div>
-                            </div>
-                        </div>
-                        <div class="list-info">
-                            <div class="list-info-media">
-                                <img src="./assets/main/images/news/marketing.png" alt="OTC" />
-                            </div>
-                            <div class="list-info-body">
-                                <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden
-                                        IR to Develop
-                                        Comprehensive
-                                        Investor Relations Program</a></div>
-                                <div class="list-info-date">20 Sep, 2017</div>
-                                <div class="list-info-auther">By Desheng Wang</div>
-                            </div>
+                        <div class="article-content">
+                            <p>Gone are the days of planting your seeds and hoping for the best. Farming has evolved
+                                from horse and plough, to GMO, and now further on, to smart technologies.</p>
+
+                            <p>The Economist covered the technological future of farming and it’s effective impacts on
+                                yield, and therefore profits.</p>
+
+                            <p>“If agriculture is to continue to feed the world, it needs to become more like
+                                manufacturing, says Geoffrey Carr. Fortunately, that is already beginning to happen.”</p>
+
+                            <p>Farms are increasingly being wired-up, or rather, wirelessed up in an effort to increase
+                                efficiencies.</p>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
-    <section class="section--big">
+    <section>
         <a name="News"></a>
         <div class="container">
-            <div class="section-title right">News</div>
-            <div class="list-links right">
-                <ul class="inline">
-                    <li><a href="#">Latest News</a></li>
-                    <li><a href="#">Products News</a></li>
-                    <li><a href="#">Events News</a></li>
-                </ul>
-            </div>
-            <div class="list-infos list-infos--two">
+            <div class="section-sub-title">Relation News</div>
+            <div class="list-infos list-infos--brief list-infos--two">
                 <div class="list-info">
                     <div class="list-info-body">
                         <div class="list-info-title"><a href="detail-news.html">Focus Universal Engages Hayden IR to
