--- a/03_template/detail-news.html
+++ b/03_template/detail-news.html
@@ -55,11 +55,11 @@
                 <ul class="navigation inline tab-from" target="#NavTab">
                     <li class="tab-from-item"><a href="./index.html">Home</a></li>
                     <li class="tab-from-item active"><a href="./for-investor.html">For Investors</a></li>
-                    <li class="tab-from-item"><a href="#">Resolutions</a></li>
-                    <li class="tab-from-item"><a href="#">Services</a></li>
-                    <li class="tab-from-item"><a href="#">Products</a></li>
-                    <li class="tab-from-item"><a href="#">Conferences</a></li>
-                    <li class="tab-from-item"><a href="#">About Us</a></li>
+                    <li class="tab-from-item"><a href="./resolutions.html">Resolutions</a></li>
+                    <li class="tab-from-item"><a href="./services.html">Services</a></li>
+                    <li class="tab-from-item"><a href="./products.html">Products</a></li>
+                    <li class="tab-from-item"><a href="./conferences.html">Conferences</a></li>
+                    <li class="tab-from-item"><a href="./about-us.html">About Us</a></li>
                 </ul>
             </div>
         </div>
@@ -316,7 +316,7 @@
         <div class="container">
             <div class="footer-list">
                 <ul class="inline">
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="./contact-us.html">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
                 </ul>
             </div>
