--- a/03_template/products.html
+++ b/03_template/products.html
@@ -15,7 +15,7 @@
     <meta name="description" content="" />
     <meta name="author" content="lgsp_Harold-Hua">
 
-    <title>Universal Smart Technology</title>
+    <title>Products</title>
 
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/bootstrap.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i" rel="stylesheet">
@@ -53,11 +53,11 @@
             </div>
             <div id="MobileNav" class="row-line web-only">
                 <ul class="navigation inline tab-from" target="#NavTab">
-                    <li class="tab-from-item active"><a href="./index.html">Home</a></li>
+                    <li class="tab-from-item"><a href="./index.html">Home</a></li>
                     <li class="tab-from-item"><a href="./for-investor.html">For Investors</a></li>
                     <li class="tab-from-item"><a href="./resolutions.html">Resolutions</a></li>
                     <li class="tab-from-item"><a href="./services.html">Services</a></li>
-                    <li class="tab-from-item"><a href="./products.html">Products</a></li>
+                    <li class="tab-from-item active"><a href="./products.html">Products</a></li>
                     <li class="tab-from-item"><a href="./conferences.html">Conferences</a></li>
                     <li class="tab-from-item"><a href="./about-us.html">About Us</a></li>
                 </ul>
